# cognatect

./: README.md  setup.cfg
src/cognatec/: cognatect.py
