[metadata]
name = cognatect-dmort27
version = 0.0.1
author = David R. Mortensen
author_email = dmortens@cs.cmu.edu
description = Library for ranking form/gloss pairs according to likely cognacy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dmort27/cognatect
project_urls =
    Bug Tracker = https://github.com/dmort27/cognatect/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <3.10
install_requires = 
    numpy
    gensim
    panphon

[options.packages.find]
where = src